--- a/index.html
+++ b/index.html
@@ -8,34 +8,52 @@
     <title>Javajam Coffeehouse</title>
   </head>
   <body>
-    <header>
-      <h1>JavaJam Coffee House</h1>
-    </header>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="menu.html">Menu</a>
-      <a href="music.html">Music</a>
-      <a href="jobs.html">Jobs</a>
-    </nav>
+    <div id="wrapper">
+      <header>
+        <h1>JavaJam Coffee House</h1>
+      </header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="menu.html">Menu</a></li>
+          <li><a href="music.html">Music</a></li>
+          <li><a href="jobs.html">Jobs</a></li>
+        </ul>
+      </nav>
+      <main>
+        <div id="windingroad"></div>
+        <h2>Follow the Winding Road to JavaJam.</h2>
+        <p>
+          “We’re a little out of the way, but take a drive down Garrett Bay Road
+          to JavaJam today! Indulge in our locally roasted free-trade coffee and
+          home-made pastries. You’ll feel right at home at JavaJam!
+        </p>
+        <h3>JavaJam Coffee House features:</h3>
+        <ul>
+          <li>Specialty Coffee and Tea</li>
+          <li>Bagels, Muffins, and Gluten-free Pastries</li>
+          <li>Organic Salads</li>
+          <li>Music and Poetry Readings</li>
+          <li>Open Mic Night</li>
+        </ul>
+        <div>
+          12010 Garrett Bay Road <br />
+          Ellison Bay, WI 54210 <br />
+          <a id="mobile" href="tel:888-555-5555">888-555-5555</a>
+          <span id="desktop">888-555-5555</span>
+        </div>
+      </main>
+      <!-- <img
+          src="./image/hinhanhhoa.jpg"
+          alt="error"
+          width="500"
+          height="300"
+        /> -->
 
-    <main id="wrapper">
-      <h2>Coffee at JavaJam</h2>
-      <ul>
-        <li>Specialty Coffee and Tea</li>
-        <li>Bagels, Muffins, and Gluten-free Pastries</li>
-        <li>Organic Salads</li>
-        <li>Music and Poetry Readings</li>
-        <li>Open Mic Night</li>
-      </ul>
-      <div>
-        12010 Garrett Bay Road <br />
-        Ellison Bay, WI 54210 <br />
-        888-555-5555
-      </div>
-    </main>
-    <footer>
-      Copyright &copy; 2016 JavaJam Coffee House<br />
-      <i><a href="#">ajinkya@ghadge.com</a></i>
-    </footer>
+      <footer>
+        Copyright &copy; 2016 JavaJam Coffee House<br />
+        <i><a href="#">ajinkya@ghadge.com</a></i>
+      </footer>
+    </div>
   </body>
 </html>
