--- a/music.html
+++ b/music.html
@@ -4,9 +4,58 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="javajam.css" />
+    <title>music</title>
   </head>
   <body>
-    <p>music</p>
+    <div id="wrapper">
+      <header>
+        <h1>JavaJam Coffee House</h1>
+      </header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="menu.html">Menu</a></li>
+          <li><a href="music.html">Music</a></li>
+          <li><a href="jobs.html">Jobs</a></li>
+        </ul>
+      </nav>
+
+      <main>
+        <div id="heroguitar"></div>
+        <h2>Music at Javajam</h2>
+        <p>
+          The first Friday night each month at JavaJam is a special night. Join
+          us from 8 pm to 11 pm for some music you won’t want to miss!
+        </p>
+        <h4>January</h4>
+        <div class="details">
+          <img
+            src="./image/melanies.jpg"
+            alt="error"
+            width="100"
+            height="100"
+            class="floatleft"
+          />
+          Melanies Morris entertains with her melodic folk style
+        </div>
+        <h4>February</h4>
+        <div class="details">
+          <img
+            src="./image/greys.jpg"
+            alt="error"
+            width="100"
+            height="100"
+            class="floatleft"
+          />
+          Tahoe Greg is back from his tour. New songs. New stories.
+        </div>
+      </main>
+
+      <footer>
+        Copyright &copy; 2016 JavaJam Coffee House<br />
+        <i><a href="#">ajinkya@ghadge.com</a></i>
+      </footer>
+    </div>
   </body>
 </html>
