--- a/index.html
+++ b/index.html
@@ -17,22 +17,31 @@
       <a href="music.html">Music</a>
       <a href="jobs.html">Jobs</a>
     </nav>
+    <div class="wrapper_container">
+      <main id="wrapper">
+        <h2>Follow the Winding Road to JavaJam.</h2>
+        <p>
+          “We’re a little out of the way, but take a drive down Garrett Bay Road
+          to JavaJam today! Indulge in our locally roasted free-trade coffee and
+          home-made pastries. You’ll feel right at home at JavaJam!
+        </p>
+        <h3>JavaJam Coffee House features:</h3>
+        <ul>
+          <li>Specialty Coffee and Tea</li>
+          <li>Bagels, Muffins, and Gluten-free Pastries</li>
+          <li>Organic Salads</li>
+          <li>Music and Poetry Readings</li>
+          <li>Open Mic Night</li>
+        </ul>
+        <div>
+          12010 Garrett Bay Road <br />
+          Ellison Bay, WI 54210 <br />
+          888-555-5555
+        </div>
+      </main>
+      <img src="./image/hinhanhhoa.jpg" alt="error" width="500" height="300" />
+    </div>
 
-    <main id="wrapper">
-      <h2>Coffee at JavaJam</h2>
-      <ul>
-        <li>Specialty Coffee and Tea</li>
-        <li>Bagels, Muffins, and Gluten-free Pastries</li>
-        <li>Organic Salads</li>
-        <li>Music and Poetry Readings</li>
-        <li>Open Mic Night</li>
-      </ul>
-      <div>
-        12010 Garrett Bay Road <br />
-        Ellison Bay, WI 54210 <br />
-        888-555-5555
-      </div>
-    </main>
     <footer>
       Copyright &copy; 2016 JavaJam Coffee House<br />
       <i><a href="#">ajinkya@ghadge.com</a></i>
